crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_nav_three_roots_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 5 files · 5 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +1 −1                                            [A accept file]│"
"│  main · 2 files          │@@ -1,4 +1,4 @@                                              [a accept]│"
"│  M f1  +1 −1             │-a1                                                                    │"
"│  M f2  +1 −0             │+A1                                                                    │"
"│──────────────────────────│ a2                                                                    │"
"│beta                      │ a3                                                                    │"
"│  main · 2 files          │ a4                                                                    │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  upstream · 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│notes                     │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  a accept hunk  A accept file  ^A accept all  ? help  q quit            "
