crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_note_modal_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 27..100 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..30 Reset Reset BOLD
2 35..37 Green Reset -
2 38..40 Red Reset -
2 67..99 Reset Reset DIM
2 99..100 Cyan Reset -
3 27..28 Cyan Reset -
3 28..99 Reset Reset REVERSED
3 99..100 Cyan Reset -
4 1..9 Reset Reset REVERSED
4 9..11 Green Reset REVERSED
4 11..12 Reset Reset REVERSED
4 12..14 Red Reset REVERSED
4 14..27 Reset Reset REVERSED
4 27..28 Cyan Reset -
4 28..31 Red Reset -
4 99..100 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 28..31 Green Reset -
5 99..100 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
6 99..100 Cyan Reset -
7 1..27 Reset Reset DIM
7 27..28 Cyan Reset -
7 99..100 Cyan Reset -
8 1..5 Reset Reset BOLD
8 27..28 Cyan Reset -
8 99..100 Cyan Reset -
9 20..21 Cyan Reset -
9 21..39 Cyan Reset BOLD
9 39..80 Cyan Reset -
9 99..100 Cyan Reset -
10 9..11 Green Reset -
10 12..14 Red Reset -
10 14..20 Reset Reset DIM
10 20..21 Cyan Reset -
10 22..38 Reset Reset BOLD
10 79..80 Cyan Reset -
10 99..100 Cyan Reset -
11 9..11 Green Reset -
11 12..14 Red Reset -
11 14..20 Reset Reset DIM
11 20..21 Cyan Reset -
11 79..80 Cyan Reset -
11 99..100 Cyan Reset -
12 20..21 Cyan Reset -
12 79..80 Cyan Reset -
12 99..100 Cyan Reset -
13 1..20 Reset Reset DIM
13 20..21 Cyan Reset -
13 79..80 Cyan Reset -
13 99..100 Cyan Reset -
14 1..8 Reset Reset BOLD
14 20..21 Cyan Reset -
14 79..80 Cyan Reset -
14 99..100 Cyan Reset -
15 20..21 Cyan Reset -
15 79..80 Cyan Reset -
15 99..100 Cyan Reset -
16 12..14 Green Reset -
16 15..17 Red Reset -
16 20..21 Cyan Reset -
16 79..80 Cyan Reset -
16 99..100 Cyan Reset -
17 20..21 Cyan Reset -
17 79..80 Cyan Reset -
17 99..100 Cyan Reset -
18 20..21 Cyan Reset -
18 22..54 Reset Reset DIM
18 79..80 Cyan Reset -
18 99..100 Cyan Reset -
19 20..80 Cyan Reset -
19 99..100 Cyan Reset -
20 27..28 Cyan Reset -
20 99..100 Cyan Reset -
21 27..28 Cyan Reset -
21 99..100 Cyan Reset -
22 27..28 Cyan Reset -
22 99..100 Cyan Reset -
23 27..28 Cyan Reset -
23 99..100 Cyan Reset -
24 27..28 Cyan Reset -
24 99..100 Cyan Reset -
25 27..28 Cyan Reset -
25 99..100 Cyan Reset -
26 27..28 Cyan Reset -
26 99..100 Cyan Reset -
27 27..28 Cyan Reset -
27 99..100 Cyan Reset -
28 27..100 Cyan Reset -
29 0..87 Reset Reset DIM
