crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_note_modal_whole_file_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +1 −1                           [A accept file] [U restore file]│"
"│  main · 3 files          │@@ -1,4 +1,4 @@                         [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │-a1                                                                    │"
"│  M f2  +1 −0             │+A1                                                                    │"
"│  M parse.rs  +10 −2      │ a2                                                                    │"
"│──────────────────────────│ a3                                                                    │"
"│beta                      │ a4                                                                    │"
"│  main · 2 files   ┌ flag whole file ─────────────────────────────────────────┐                   │"
"│  A u1  +1 −0  [ups│ f1 · whole file                                          │                   │"
"│  A u2  +2 −0  [mix│                                                          │                   │"
"│  [upstream] 1 file│ the whole rewrite needs another look▌                    │                   │"
"│───────────────────│                                                          │                   │"
"│W/notes            │                                                          │                   │"
"│  draft · 1 file   │                                                          │                   │"
"│  M n2.md  +2 −0   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │ ⏎ send   ^J newline   Esc cancel                         │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
